# stratlab

./: .gitignore  CHEATSHEET.md  README.md  pyproject.toml
.claude/: settings.json
docs/archive/: news_scrapers_ap_cna.md
docs/arena/: PILOT.md  curator_prompt.md  generator_prompt.md
examples/: cross_sectional_demo.py  gym_demo.py  quickstart.py  universe_demo.py
stratlab/: __init__.py  evaluation.py  indicators.py  refresh.py  refresh_all.py
stratlab/analytics/: metrics.py  plot.py  quality.py  tearsheet.py  trades.py
stratlab/arena/: AGENT_PLAYBOOK.md  ETF_REGISTRY.md  __init__.py  cleanup.py  config.py  corr_check.py  corr_dump.py  dump_annual_calmar.py  dump_equity_curve.py  dump_trades.py  intents.py  is_calmar_estimate.py  leaderboard.py  promote.py  regime_check.py  seed.py  submit.py
stratlab/data/: _etf_lists.py  _futures_lists.py  _index_lists.py  catalog.py  inception.py  provider.py  universe.py
stratlab/engine/: backtest.py  broker.py  context.py
stratlab/gym/: trading_env.py
stratlab/news/: __init__.py  ap.py  backfill.py  bbc.py  cna.py  features.py  kyodo.py  npr.py  sentiment.py  storage.py
stratlab/strategies/: base.py  cross_sectional.py  donchian_breakout.py  mean_reversion.py  momentum.py  momentum_plus_inverse.py  news_overlay.py  pairs.py  sma_crossover.py
stratlab/strategies/arena/: __init__.py
stratlab/strategies/arena/gen_10/: equity_etf_momentum_trend.py  etf_momentum_sharpe_voltarget.py  etf_xsect_vol_carry.py  gdx_gld_qqq_timing.py  gdx_gld_sector_timing.py  gdx_gld_sp500_gate.py  iwm_voltarget_jnk_spy_gate.py  move_bondvol_pct_sp500_gate.py  move_pct_reit_rotation.py  move_pct_sp500_momentum.py  multiasset_trend_parity.py  opus1_infr_tlt_gld_defensive.py  opus1_rsp_breadth_shy_defensive.py  opus1_stochastic_gld_shy_defensive.py  (+57 more)
stratlab/strategies/curated/: qqq_bollinger_vvix_dipbuy.py  rp_credit_tilt.py
tests/: conftest.py  test_arena.py  test_engine.py  test_evaluation.py  test_indicators.py  test_limit_orders.py  test_metrics.py  test_news_features.py  test_news_resume.py  test_storage.py  test_trades.py
(+364 files in other folders)
