[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stratlab"
version = "0.1.0"
description = "Algorithmic trading backtest gym for AI agents"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "yfinance>=0.2.30",
    "gymnasium>=0.29",
    "plotly>=5.15",
    "lxml>=4.9",
    "openpyxl>=3.1",
    "beautifulsoup4>=4.12",
    "ta>=0.11",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]
sentiment = ["torch>=2.0", "transformers>=4.30"]

[tool.ruff]
line-length = 100
target-version = "py310"
